# cowork-local

./: .env.example  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  COWORK.md  COWORK_PLAN.md  OPENCODE.md  README.md  SECURITY.md  activate-unificado.sh  auto-build.sh  cowork  cowork_chat.sh  pyproject.toml  requirements.txt  run_local_test.py
agents/: code-reviewer.md  test-generator.md
api-chat/: auth.py  chat.db  chat.py  cli.py  db.py  models.py  pyproject.toml  requirements.txt  server.py  telegram_bot.py  test_chat.db
api-chat/tests/: test_api.py
apps/: mcp_http_server.py
apps/api/: main.py  streaming.py
apps/cli/: apply_diff.py  auto_watcher.py  cowork_graph.py  (+8 more)
claude-code/: activate.sh  package-lock.json  package.json  proxy.py
config/: models.yaml  settings.yaml
data/: cv.md  telegram_state.txt
graph/: accounting_db.py  booking_db.py  booking_prompts.py  graph.py  graph_accounting.py  graph_booking.py  graph_code.py  graph_codewhale.py  graph_design.py  graph_mcp.py  redis_client.py  state.py
hooks/: post-generate.sh  pre-commit.sh
infra/: docker-compose.yml  postgres_booking.sql  postgres_init.sql
models/: __init__.py  deepseek_client.py  qwen_ollama_client.py
plugins/: plugin_manager.py  skill_template.yaml
rules/: api.md  security.md
tests/: test_cli.py  test_core.py  test_execute_command.py
tools/: accounting_poller.py  auto_executor.py  email_poller.py  email_sender.py  knowledge_base.py  marketing_scheduler.py  mcp_client.py  reminder_job.py  scheduler.py  security.py  workspace_manager.py
(+35 files in other folders)
