[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerpoint-creator"
version = "0.1.0"
description = "Create PowerPoint presentations from code or CLI"
requires-python = ">=3.10"
dependencies = [
    "python-pptx>=0.6.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
pptx = "src.powerpoint_creator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["powerpoint_creator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
