[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "api-chat"
version = "1.0.0"
description = "Python CLI chat API server with coworking assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.23",
    "aiosqlite>=0.19.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0,<4.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
]

[project.scripts]
api-chat = "cli:main"

[tool.setuptools.packages.find]
include = ["api_chat", "api_chat.*"]
